[gd_scene load_steps=5 format=2]

[ext_resource path="res://Spells/Circle.png" type="Texture" id=1]
[ext_resource path="res://Spells/MahoujinMenuBg.png" type="Texture" id=2]
[ext_resource path="res://Main/main.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Select"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("MainOptions:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("MainOptions:anchor_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("MainOptions:anchor_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("MainOptions:anchor_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("MainOptions:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("../Sub-Menu:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/6/type = "value"
tracks/6/path = NodePath("MainOptions:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="Lang" type="CanvasLayer" parent="."]
layer = 2

[node name="_" type="Control" parent="Lang"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EN" type="Button" parent="Lang/_"]
anchor_right = 0.45
anchor_bottom = 1.0
text = "EN"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JP" type="Button" parent="Lang/_"]
anchor_left = 0.55
anchor_right = 1.0
anchor_bottom = 1.0
text = "JP"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="|" type="Label" parent="Lang/_"]
anchor_left = 0.45
anchor_right = 0.55
anchor_bottom = 1.0
text = "|"
valign = 1

[node name="Selected" type="TextureRect" parent="Lang/_"]
anchor_right = 0.45
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Section" type="AspectRatioContainer" parent="Menu"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
ratio = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainOptions" type="AspectRatioContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="TextureRect" parent="Menu/MainOptions"]
margin_left = 212.0
margin_right = 812.0
margin_bottom = 600.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Bobo" type="TextureButton" parent="Menu/MainOptions/Bg"]
anchor_left = 0.0234375
anchor_top = 0.4125
anchor_right = 0.195312
anchor_bottom = 0.5875
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../About")
focus_previous = NodePath("../Basic")
texture_hover = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Basic" type="TextureButton" parent="Menu/MainOptions/Bg"]
anchor_left = 0.682813
anchor_top = 0.151562
anchor_right = 0.85625
anchor_bottom = 0.323438
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../Bobo")
focus_previous = NodePath("../About")
texture_hover = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="About" type="TextureButton" parent="Menu/MainOptions/Bg"]
anchor_left = 0.684375
anchor_top = 0.684375
anchor_right = 0.85625
anchor_bottom = 0.85625
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../Basic")
focus_previous = NodePath("../Bobo")
texture_hover = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Anim" type="AnimationPlayer" parent="Menu"]
playback_speed = 1.2
anims/Select = SubResource( 1 )

[node name="Sub-Menu" type="AspectRatioContainer" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
mouse_filter = 2
ratio = 2.0

[node name="ClickAnims" type="CanvasLayer" parent="."]
layer = 0

[connection signal="pressed" from="Lang/_/EN" to="." method="_on_lang" binds= [ 0 ]]
[connection signal="pressed" from="Lang/_/JP" to="." method="_on_lang" binds= [ 1 ]]
[connection signal="pressed" from="Menu/MainOptions/Bg/Bobo" to="." method="_on_Select" binds= [ 1 ]]
[connection signal="pressed" from="Menu/MainOptions/Bg/Basic" to="." method="_on_Select" binds= [ 0 ]]
[connection signal="pressed" from="Menu/MainOptions/Bg/About" to="." method="_on_Select" flags=3 binds= [ 2 ]]
